# AmeNote_Protozoa

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Contribution.md  License.md  README.md
Common/: cobs.cpp  interchip.cpp  tusb_freertos.c
Common/include/: cobs.h  interchip.h  tusb_config.h  tusb_freertos.h
ProtoZOA_Main/: CMakeLists.txt  amenotelogo.h  main.c  protozoa_main.c  protozoa_main.h  protozoa_main_tasks.h
ProtoZOA_Main/lcd/: GUI_Paint.c  GUI_Paint.h  LCD_1in14.c  LCD_1in14.h  README.md  fonts.h
ProtoZOA_Main/picoprobe/include/: board_pico_config.h
ProtoZOA_Main/picoprobe/src/: main.c
ProtoZOA_PicoProbe/: CMakeLists.txt  README.md
ProtoZOA_PicoProbe/src/: main.c  probe.pio  probe_oen.pio
UUT/CDC_FunctionBlocks/: CMakeLists.txt  main.cpp
UUT/CME_WIDI_CORE_EXP/: CMakeLists.txt  main.cpp  usb_descriptors.cpp
UUT/DIN_Bridge/: CMakeLists.txt  main.cpp  usb_descriptors.cpp
UUT/USB_FunctionBlocks/: CMakeLists.txt  main.cpp  usb_descriptors.cpp
UUT_FreeRTOS/FreeRTOS_Tasks/: BlinkTask.cpp  BlinkTask.h  CMEWidiTask.cpp  CMEWidiTask.h  CMakeLists.txt  DINSerialTask.cpp  DINSerialTask.h  EthernetW5500Task.cpp  EthernetW5500Task.h  FreeRTOS_Tasks.h  PEHeaderParser.cpp  PEHeaderParser.h  PicoMainTask.cpp  PicoMainTask.h  SerialBracketing.h  Type25SerialTask.cpp  Type25SerialTask.h  UMPProcessing.cpp  UMPProcessing.h  UMPRingBuffer.h  USBCDCSerialTask.cpp  USBCDCSerialTask.h  USBMIDITask.cpp  USBMIDITask.h  dump_packet.h  main.c  usb_descriptors.3groups.cpp  usb_descriptors.bt.cpp
UUT_FreeRTOS/FreeRTOS_Tasks/tests/: CMakeLists.txt  UMPRingBuffer.tests.cpp
UUT_FreeRTOS/USB_MIDI_Echo/: CMakeLists.txt  main.c  protozoa_uut.cpp  protozoa_uut_tasks.h  usb_descriptors.cpp
doc/: Contributors.md
doc/DeveloperGuide/: README.md
doc/QuickStartGuide/: README.md
doc/UserManual/: README.md
